--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </button>
   </div>
 
-  <div class="container d-flex justify-content-center my-4">
+  <div class="container d-flex justify-content-center flex-wrap my-4">
     <div class="card mb-3 mx-3" style="max-width: 540px">
       <div class="row g-0">
         <div class="col-md-4">
@@ -223,7 +223,7 @@
       </div>
     </div>
   </div>
-  <div class="container d-flex justify-content-center my-4">
+  <div class="container d-flex justify-content-center flex-wrap my-4">
     <div class="card mb-3 mx-3" style="max-width: 540px">
       <div class="row g-0">
         <div class="col-md-4">
